# fla-project

./: .gitignore  CMakeLists.txt  README.md
programs/: case1.tm
tests/args/: run.sh  test.cpp  test.sh
tests/args/help/: expected.txt
tests/args/invalid_option/: expected.txt
tests/args/no_tm_path/: expected.txt
tests/args/not_exist/: expected.txt
tests/args/read_dir/: expected.txt
tests/args/too_many_args/: expected.txt
tests/args/unreadable/: expected.txt
tests/code/: test.cpp  test.txt
tests/lexer/: test.cpp
tests/parser/: test.cpp
tests/run/: test.cpp
tests/run/tm/: case2.tm  negative.tm  right_and_left.tm  trivial.tm
tests/util/: test.cpp
turing-project/: main.cpp
turing-project/include/: code.h  color.h  constants.h  error.h  lexer.h  messages.h  parser.h  str_literals.h  tape.h  tm.h  token.h  turing.h  util.h  util.hpp
turing-project/lib/: code.cpp  error.cpp  lexer.cpp  parser.cpp  tm.cpp  token.cpp  turing.cpp  util.cpp
turing-project/src/: code.cpp  color.cpp  error.cpp  lexer.cpp  parser.cpp  tape.cpp  tm.cpp  token.cpp  util.cpp
